Fixed popover z-index and set pin to true on Datepicker since it no longer looks bad when pinned over the input.

--- a/src/Popover.styl
+++ b/src/Popover.styl
@@ -4,6 +4,9 @@
     background: #fff
     padding: .9375rem
 
+.coral-Popover-drop
+  z-index: 10010
+
 .coral-Popover-drop-element
   display: block
   &.coral-Popover-drop-hidden
